python/testData/inspections/PyUnresolvedReferencesInspection/unusedUnresolvedModuleImported.py
import <error descr="No module named 'spam'">spam</error>
